--- a/.github/workflows/template.yml
+++ b/.github/workflows/template.yml
@@ -19,6 +19,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Test Docker Setup
+        run: |
+          docker --version
+          docker run hello-world
+
       - name: Create LFS file list
         run: git lfs ls-files -l | cut -d' ' -f1 | sort > .lfs-assets-id
 
