--- a/.github/workflows/template.yml
+++ b/.github/workflows/template.yml
@@ -1,6 +1,9 @@
 name: GameCI Template 🎮
 
-on: push
+on:
+  push:
+    paths:
+      - 'CampusRush/**'
 
 env:
   UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
