--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,6 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+# User added
+CampusRush/UserSettings/Layouts/default-2021.dwlt
+
